# obs-plugintemplate

./: CMakeLists.txt  README.md  buildspec.json
.github/workflows/: push.yaml  windows-plugin.yaml
data/effects/: pill_glass.effect
data/locale/: en-US.ini
src/: pill-animation.cpp  pill-animation.hpp  pill-layout.cpp  pill-layout.hpp  pill-source.cpp  pill-source.hpp  plugin-main.cpp  svg-text.cpp  svg-text.hpp  time-format.cpp  time-format.hpp
